# somhta_challenge

./: .gitignore  README.md  pyproject.toml  test_01_modified.py
orders_microservices/: .env
orders_microservices/distribution_microservices/src/: main.py
orders_microservices/distribution_microservices/src/frameworks/db/: mongo.py
orders_microservices/distribution_microservices/src/frameworks/http/: fastapi.py
orders_microservices/distribution_microservices/src/orders/entities/: orders.py
orders_microservices/distribution_microservices/src/orders/http/: orders_endpoints.py
orders_microservices/distribution_microservices/src/orders/repositories/: mongo_orders_repositories.py
orders_microservices/distribution_microservices/src/orders/usecases/: manage_orders_usecases.py
